@@ -2346,6 +2346,9 @@ Other
 
 * LUCENE-9225: Rectangle extends LatLonGeometry so it can be used in a geometry collection. (Ignacio Vera)
 
+* LUCENE-11868: Add a FilterIndexInput and FilterIndexOutput class to more easily and safely create delegate
+  IndexInput and IndexOutput classes (Marc D'Mello)
+
 ======================= Lucene 8.4.1 =======================
 
 Bug Fixes
